--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -6,5 +6,12 @@
 </head>
 <body>
     <h1>Информация о товаре</h1>
+    <p>Наименование товара: {{product.name}}</p>
+    <p>Описание товара: {{product.description}}</p>
+    <p>Изображение товара: <img src='{{ product.photo.url }}' alt='{{ product.name }}'></p>
+    <p>Категория товара: {{product.category}}</p>
+    <p>Цена товара: {{product.price}}</p>
+    <p>Дата создания товара: {{product.created_at}}</p>
+    <p>Дата последнего изменения: {{product.updated_at}}</p>
 </body>
 </html>
