adding the 'truncatechars:100' filter to the template 'main_page'

--- a/catalog/templates/catalog/main_page.html
+++ b/catalog/templates/catalog/main_page.html
@@ -13,7 +13,7 @@
                     Наименование товара: {{product.name}}
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Описание товара: {{product.description}}
+                    Описание товара: {{product.description|truncatechars:100}}
                 </li>
                 <li>
                     Изображение товара: <img src='{{ product.photo.url }}' alt='{{ product.name }}'>
