--- a/catalog/templates/catalog/contacts.html
+++ b/catalog/templates/catalog/contacts.html
@@ -2,6 +2,11 @@
 
 
 {% block content %}
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Наши контакты</h1>
+
+</div>
+<div class="container">
 
     <div class="row text-start">
         <div class="col-lg-9 col-md-6 col-sm-12">
