--- a/catalog/templates/catalog/main_page.html
+++ b/catalog/templates/catalog/main_page.html
@@ -1,18 +1,27 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-<h1 class="mb-4">Список товаров</h1>
-    <ul class="list-group">
-        {% for product in products %}
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                Наименование товара: {{product.name}}
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                Описание товара: {{product.description|truncatechars:100}}
-            </li>
-            <li>
-                Изображение товара: <img src='{{ product.photo.url }}' alt='{{ product.name }}'>
-            </li>
-        {% endfor %}
-    </ul>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Finstore</h1>
+    <p class="lead">Finstore - онлайн магазин товаров по доступным ценам</p>
+        <p class="lead">Наши товары:</p>
+
+</div>
+<div class="container">
+<div class="card-group">
+{% for product in products %}
+
+        <div class="card">
+            <img src='{{ product.photo.url }}' alt='{{ product.name }}'>
+            <div class="card-body">
+                <h5 class="card-title">{{product.name}}</h5>
+                <p class="card-text">{{product.description|truncatechars:100}}</p>
+
+            </div>
+        </div>
+{% endfor %}
+
+</div>
+</div>
 {% endblock %}
+
