--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -1,25 +1,21 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-<div class="row text-center">
-    <div class="col-3">
-        <div class="card mb-4 box-shadow">
-            <div class="card-header">
-                <h4 class="my-0 font-weight-normal">Фото</h4>
-            </div>
-            <div class="card-body">
-                <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                    <li>- Наименование товара: {{product.name}}</li>
-                    <li>- Описание товара: {{product.description}}</li>
-                    <li>- Изображение товара: <img src='{{ product.photo.url }}' alt='{{ product.name }}'></li>
-                    <li>- Категория товара: {{product.category}}</li>
-                    <li>- Цена товара: {{product.price}}</li>
-                    <li>- Дата создания товара: {{product.created_at}}</li>
-                    <li>- Дата последнего изменения: {{product.updated_at}}</li>
-                </ul>
-                <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
-            </div>
-        </div>
-    </div>
+<div class="card" style="width: 18rem;">
+  <img src="{{ MEDIA_URL }}{{ product.image.url }}" alt="{{ product.name }}">
+  <div class="card-body">
+    <h5 class="card-title">{{product.name}}</h5>
+    <p class="card-text">{{product.description}}</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Категория товара: {{product.category}}</li>
+    <li class="list-group-item">Цена товара: {{product.price}}</li>
+    <li class="list-group-item">Дата создания товара: {{product.created_at}}</li>
+    <li class="list-group-item">Дата последнего изменения: {{product.updated_at}}</li>
+  </ul>
+  <div class="card-body">
+    <a href="#" class="btn btn-success">Добавить в корзину</a>
+    <a href="http://127.0.0.1:8000/catalog/main_page/" class="btn btn-primary">На главную</a>
+  </div>
 </div>
 {% endblock %}
