--- a/catalog/templates/catalog/create_product.html
+++ b/catalog/templates/catalog/create_product.html
@@ -2,11 +2,11 @@
 
 
 {% block content %}
-<form method="post" action="">
+<form method="post" action="" enctype="multipart/form-data">
     {% csrf_token %}
   <div class="col-md-4">
     <label for="validationCustom01" class="form-label">Наименование продукта</label>
-    <input type="text" class="form-control" id="validationCustom01" required>
+    <input type="text" class="form-control" id="validationCustom01" name="Наименование продукта" required>
     <div class="valid-feedback">
       Looks good!
     </div>
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="col-md-4">
-    <label for="validationCustom01" class="form-label">Изображение продукта</label>
+    <label for="validationCustom03" class="form-label">Изображение продукта</label>
     <input type="image" class="form-control" id="validationCustom03">
     <div class="valid-feedback">
       Looks good!
@@ -27,28 +27,28 @@
   </div>
 
   <div class="col-md-4">
-    <label for="validationCustom02" class="form-label">Категория продукта</label>
-    <input type="text" class="form-control" id="validationCustom04" required>
+    <label for="validationCustom04" class="form-label">Категория продукта</label>
+    <input type="text" class="form-control" id="validationCustom04" name="Категория продукта" required>
     <div class="valid-feedback">
       Looks good!
     </div>
   </div>
   <div class="col-md-4">
-    <label for="validationCustom02" class="form-label">Цена продукта</label>
+    <label for="validationCustom05" class="form-label">Цена продукта</label>
     <input type="text" class="form-control" id="validationCustom05" required>
     <div class="valid-feedback">
       Looks good!
     </div>
   </div>
   <div class="col-md-4">
-    <label for="validationCustom02" class="form-label">Дата создания товара</label>
+    <label for="validationCustom06" class="form-label">Дата создания товара</label>
     <input type="text" class="form-control" id="validationCustom06">
     <div class="valid-feedback">
       Looks good!
     </div>
   </div>
   <div class="col-md-4">
-    <label for="validationCustom02" class="form-label">Дата последнего изменения</label>
+    <label for="validationCustom07" class="form-label">Дата последнего изменения</label>
     <input type="text" class="form-control" id="validationCustom07">
     <div class="valid-feedback">
       Looks good!
