--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -19,7 +19,7 @@
     </ul>
   <div class="card-body">
     <a href="#" class="btn btn-success">Добавить в корзину</a>
-    <a href="http://127.0.0.1:8000/catalog/main_page/" class="btn btn-primary">На главную</a>
+    <a href="{% url 'catalog:main_page' %}" class="btn btn-primary">На главную</a>
   </div>
 </div>
 </div>
