--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -8,14 +8,14 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">{{product.name}}</h5>
-        <p class="card-text">{{product.description}}</p>
+        <h5 class="card-title">{{object.name}}</h5>
+        <p class="card-text">{{object.description}}</p>
       </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">Категория товара: {{product.category}}</li>
-      <li class="list-group-item">Цена товара: {{product.price}}</li>
-      <li class="list-group-item">Дата создания товара: {{product.created_at}}</li>
-      <li class="list-group-item">Дата последнего изменения: {{product.updated_at}}</li>
+      <li class="list-group-item">Категория товара: {{object.category}}</li>
+      <li class="list-group-item">Цена товара: {{object.price}}</li>
+      <li class="list-group-item">Дата создания товара: {{object.created_at}}</li>
+      <li class="list-group-item">Дата последнего изменения: {{object.updated_at}}</li>
     </ul>
   <div class="card-body">
     <a href="#" class="btn btn-success">Добавить в корзину</a>
