--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -8,7 +8,7 @@
 </div>
 <div class="container">
 <div class="card-group">
-{% for product in products %}
+{% for product in object_list %}
     <div class="card text-center">
         <img src="{{ MEDIA_URL }}{{ product.image.url }}" alt="{{ product.name }}">
         <div class="card-body">
