--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{%block title %}Мой блог{% endblock %}</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-
 </head>
 <body>
-{% include 'catalog/main_menu.html' %}
+{% include 'blog/main_menu.html' %}
 {% block content %}
 {% endblock %}
-{% include 'catalog/footer.html' %}
 <script src="/static/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
