--- a/blog/templates/blog/contacts.html
+++ b/blog/templates/blog/contacts.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 
+<title>{% block title %}Контакты{% endblock %}</title>
 
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
