--- a/blog/templates/blog/main_menu.html
+++ b/blog/templates/blog/main_menu.html
@@ -1,12 +1,7 @@
-<div class="card text-center">
-    <div class="card-header">
-      <ul class="nav nav-tabs card-header-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="true" href="#">Главная</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Контакты</a>
-        </li>
-      </ul>
-    </div>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+    <h5 class="my-0 mr-md-auto font-weight-normal">FinBlog</h5>
+    <nav class="ms-5">
+        <a class="p-2 btn btn-outline-primary" href="{% url 'blog:main_page' %}">Главная</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'blog:contacts' %}">Контакты</a>
+    </nav>
 </div>
