--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -1,4 +1,6 @@
 {% extends 'blog/base.html' %}
+<title>{% block title %}Главная{% endblock %}</title>
+
 {% block content %}
 <div class="card text-center">
 
