fixing the templates; creating CRUD views; fixing the model 'Article'

--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -1,20 +1,16 @@
 {% extends 'blog/base.html' %}
+<title>{% block title %}{{object.title}}{% endblock %}</title>
+
 {% block content %}
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-        <div class="d-grid gap-2 col-6 mx-auto">
-          <button class="btn btn-primary" type="button">Читать</button>
-        </div>
-      </div>
-    </div>
+<div class="row g-0 bg-body-secondary position-relative">
+  <div class="col-md-6 mb-md-0 p-md-4">
+    <img src="{{ MEDIA_URL }}{{ object.preview.url }}" class="w-100" alt="{{ object.title }}">
+  </div>
+  <div class="col-md-6 p-4 ps-md-0">
+    <h5 class="mt-0">{{object.title}}</h5>
+    <p>{{object.content}}</p>
+    <p class="card-text"><small class="text-body-secondary">Количество просмотров: {{object.views}}</small></p>
+    <a class="p-2 btn btn-outline-primary" href="{% url 'blog:articles' %}">Вернуться к списку статей</a>
   </div>
 </div>
 {% endblock %}
