--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-{% include 'catalog/main_menu.html' %}
+{% include 'blog/main_menu.html' %}
 {% block content %}
 {% endblock %}
 {% include 'catalog/footer.html' %}
