--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,7 @@
 {% include 'blog/main_menu.html' %}
 {% block content %}
 {% endblock %}
+{% include 'catalog/footer.html' %}
 <script src="/static/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
