--- a/blog/templates/blog/main_menu.html
+++ b/blog/templates/blog/main_menu.html
@@ -2,8 +2,8 @@
     <h5 class="my-0 mr-md-auto font-weight-normal">FinStore</h5>
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:main_page' %}">Продукты</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'blog:main_page' %}">Блог</a>
-                <a class="p-2 btn btn-outline-primary" href="{% url 'blog:contacts' %}">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'blog:article_main' %}">Блог</a>
+                <a class="p-2 btn btn-outline-primary" href="{% url 'blog:article_contacts' %}">Контакты</a>
 
     </nav>
 </div>
