--- a/blog/templates/blog/article_confirm_delete.html
+++ b/blog/templates/blog/article_confirm_delete.html
@@ -6,6 +6,6 @@
 <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Удалить</button>
-    <a href="{% url 'blog:articles' %}" class="btn btn-secondary">Отмена</a>
+    <a href="{% url 'blog:article_list' %}" class="btn btn-secondary">Отмена</a>
 </form>
 {% endblock %}
