--- a/blog/templates/blog/article_form.html
+++ b/blog/templates/blog/article_form.html
@@ -7,6 +7,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Сохранить</button>
-    <a href="{% url 'blog:articles' %}" class="btn btn-secondary">Отмена</a>
+    <a href="{% url 'blog:article_list' %}" class="btn btn-secondary">Отмена</a>
 </form>
 {% endblock %}
