--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -24,7 +24,7 @@
         <p class="card-text"><small class="text-body-secondary">Количество просмотров: {{ object.views }} </small></p>
 
         <div class="d-grid gap-2 col-6 mx-auto">
-          <a href="{% url 'blog:article' object.pk %}" class="btn btn-primary">Читать</a>
+          <a href="{% url 'blog:article_detail' object.pk %}" class="btn btn-primary">Читать</a>
         </div>
       </div>
     </div>
