--- a/blog/templates/blog/main_page.html
+++ b/blog/templates/blog/main_page.html
@@ -7,8 +7,8 @@
 <div class="card-body">
     <h5 class="card-title">Добро пожаловать в мой блог.</h5>
     <p class="card-text">Он пока не доработан, но мы это исправим.</p>
-    <a href="{% url 'blog:articles' %}" class="btn btn-primary">Мои статьи</a>
-    <a href="{% url 'blog:new' %}" class="btn btn-primary">Создать новую статью</a>
+    <a href="{% url 'blog:article_list' %}" class="btn btn-primary">Мои статьи</a>
+    <a href="{% url 'blog:article_create' %}" class="btn btn-primary">Создать новую статью</a>
 
 </div>
   </div>
