--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,27 +1,30 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-<div class="card mb-3 text-center" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="{{ MEDIA_URL }}{{ product.image.url }}" class="img-fluid rounded-start" alt="{{ product.name }}">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">{{object.name}}</h5>
-        <p class="card-text">{{object.description}}</p>
-      </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Категория товара: {{object.category}}</li>
-      <li class="list-group-item">Цена товара: {{object.price}}</li>
-      <li class="list-group-item">Дата создания товара: {{object.created_at}}</li>
-      <li class="list-group-item">Дата последнего изменения: {{object.updated_at}}</li>
-    </ul>
-  <div class="card-body">
+<div class="row g-0 bg-body-secondary position-relative">
+  <div class="col-md-6 mb-md-0 p-md-4">
+    <img src="{{ MEDIA_URL }}{{ object.image.url }}" class="w-100" alt="{{ object.title }}">
+  </div>
+  <div class="col-md-6 p-4 ps-md-0">
+    <h5 class="mt-0">{{object.name}}</h5>
+    <p class="card-text"><small class="text-body-secondary">{{object.description}}</small></p>
+    <p class="card-text"><small class="text-body-secondary">Категория товара: {{object.category}}</small></p>
+    <p class="card-text"><small class="text-body-secondary">Цена товара: {{object.price}}</small></p>
+    <p class="card-text"><small class="text-body-secondary">Дата создания товара: {{object.created_at}}</small></p>
+    <p class="card-text"><small class="text-body-secondary">Дата последнего изменения: {{object.updated_at}}</small></p>
     <a href="#" class="btn btn-success">Добавить в корзину</a>
-    <a href="{% url 'catalog:main_page' %}" class="btn btn-primary">На главную</a>
+    <a href="{% url 'catalog:product_list' %}" class="btn btn-primary">На главную</a>
+    <a href="{% url 'catalog:product_update' object.pk %}" class="btn btn-primary">Редактировать</a>
+    <a href="{% url 'catalog:product_delete' object.pk %}" class="btn btn-primary">Удалить</a>
+
   </div>
 </div>
-</div>
-</div>
 {% endblock %}
+
+
+
+
+
+
+
+
