--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,11 +1,11 @@
 {% extends 'catalog/base.html' %}
-
-{% block title %}Добавить/Редактировать продукт{% endblock %}
+<title>{% block title %}Добавить/Редактировать продукт{{object.title}}{% endblock %}</title>
 
 {% block content %}
-<h2>{{ view.title }}</h2>
+<h2>Форма продукта</h2>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
+    {{ form.non_field_errors }}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Сохранить</button>
     <a href="{% url 'catalog:product_list' %}" class="btn btn-secondary">Отмена</a>
