--- a/blog/templates/blog/main_menu.html
+++ b/blog/templates/blog/main_menu.html
@@ -2,18 +2,16 @@
     <h5 class="my-0 mr-md-auto font-weight-normal">FinStore</h5>
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:product_list' %}">Продукты</a>
+        {% if user.is_authenticated %}
+
         <a class="p-2 btn btn-outline-primary" href="{% url 'blog:article_main' %}">Блог</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'blog:article_contacts' %}">Контакты</a>
 
-        {% if user.is_authenticated %}
-	        <form method="post" action="{% url 'users:logout' %}" style="display: inline;">
-	            {% csrf_token %}
-	            <button type="submit" class="p-2 btn btn-outline-primary">Выйти
-	            </button>
-                <span class="navbar-text">
-        Добро пожаловать в наш магазин!
-      </span>
-	        </form>
+        <form method="post" action="{% url 'users:logout' %}" style="display: inline;">
+            {% csrf_token %}
+            <button type="submit" class="p-2 btn btn-outline-primary">Выйти</button>
+            <span class="navbar-text">Добро пожаловать в наш магазин!</span>
+        </form>
         {% else %}
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a>
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Зарегистрироваться</a>
