--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -14,14 +14,18 @@
         <div class="card-body">
             <h5 class="card-title">{{object.name}}</h5>
             <p class="card-text">{{object.description|truncatechars:100}}</p>
-            <a class="p-2 btn btn-primary" href="{% url 'catalog:product_detail' object.pk %}">Посмотреть товар</a>
+            {% if user.is_authenticated %}
+                <a class="p-2 btn btn-primary" href="{% url 'catalog:product_detail' object.pk %}">Посмотреть товар</a>
+            {% endif %}
         </div>
     </div>
 {% endfor %}
 </div>
+    {% if user.is_authenticated %}
     <div class="d-grid gap-2">
         <a href="{% url 'catalog:product_create' %}" class="btn btn-primary">Добавить продукт</a>
     </div>
+    {% endif %}
 </div>
 {% endblock %}
 
